--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ cmake_minimum_required(VERSION 3.15)
 # `project()` command. `project()` sets up some helpful variables that describe source/binary
 # directories, and the current project version. This is a standard CMake command.
 
-project(CloudSeedReverb VERSION 0.0.1)
+project(CloudReverb VERSION 0.0.1)
 
 # If you've installed JUCE somehow (via a package manager, or directly using the CMake install
 # target), you'll need to tell this project that it depends on the installed copy of JUCE. If you've
@@ -39,7 +39,7 @@ add_subdirectory(audio_engine)
 # the formats specified by the FORMATS arguments. This function accepts many optional arguments.
 # Check the readme at `docs/CMake API.md` in the JUCE repo for the full list.
 
-juce_add_plugin(CloudSeedReverb
+juce_add_plugin(CloudReverb
     # VERSION ...                               # Set this if the plugin version is different to the project version
     # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
     # ICON_SMALL ...
@@ -53,7 +53,7 @@ juce_add_plugin(CloudSeedReverb
     PLUGIN_MANUFACTURER_CODE Juce               # A four-character manufacturer id with at least one upper-case character
     PLUGIN_CODE Dem0                            # A unique four-character plugin id with at least one upper-case character
     FORMATS AU VST3 Standalone                  # The formats to build. Other valid formats are: AAX Unity VST AU AUv3
-	PRODUCT_NAME "CloudSeedReverb")        # The name of the final executable, which can differ from the target name
+	PRODUCT_NAME "CloudReverb")        # The name of the final executable, which can differ from the target name
 
 # `juce_generate_juce_header` will create a JuceHeader.h for a given target, which will be generated
 # into your build tree. This should be included with `#include <JuceHeader.h>`. The include path for
@@ -68,7 +68,7 @@ juce_add_plugin(CloudSeedReverb
 # although it doesn't really affect executable targets). Finally, we supply a list of source files
 # that will be built into the target. This is a standard CMake command.
 
-target_sources(CloudSeedReverb PRIVATE
+target_sources(CloudReverb PRIVATE
 	    plugin/PluginEditor.cpp
 	    plugin/PluginProcessor.cpp)
 # `target_compile_definitions` adds some preprocessor definitions to our target. In a Projucer
@@ -78,7 +78,7 @@ target_sources(CloudSeedReverb PRIVATE
 # definitions will be visible both to your code, and also the JUCE module code, so for new
 # definitions, pick unique names that are unlikely to collide! This is a standard CMake command.
 
-target_compile_definitions(CloudSeedReverb
+target_compile_definitions(CloudReverb
     PUBLIC
     # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
     JUCE_WEB_BROWSER=0  # If you remove this, add `NEEDS_WEB_BROWSER TRUE` to the `juce_add_plugin` call
@@ -102,7 +102,7 @@ target_compile_definitions(CloudSeedReverb
 # linked automatically. If we'd generated a binary data target above, we would need to link to it
 # here too. This is a standard CMake command.
 
-target_link_libraries(CloudSeedReverb PRIVATE
+target_link_libraries(CloudReverb PRIVATE
     # AudioPluginData           # If we'd created a binary data target, we'd link to it here
     juce::juce_audio_utils
     audio_engine)
