--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,7 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    
+    - name: Checkout submodules
+    - run: git submodule update --init --recursive
+    
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
