--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Checkout submodules
-    - run: git submodule update --init --recursive
+      run: git submodule update --init --recursive
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
