--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,13 +12,16 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     
     - name: Checkout submodules
       run: git submodule update --init --recursive
+    
+    - name: install packages
+    - run: apt instsll libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
