--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
       run: git submodule update --init --recursive
     
     - name: install packages
-      run: apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev
+      run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
