--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,7 +12,7 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: macos-11.0
 
     steps:
     - uses: actions/checkout@v2
@@ -20,8 +20,8 @@ jobs:
     - name: Checkout submodules
       run: git submodule update --init --recursive
     
-    - name: install packages
-      run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libasound2-dev
+    #- name: install packages
+    #  run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libasound2-dev
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
