--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,7 +1,10 @@
 name: CMake
 
-on: [push]
-
+on: 
+  push:
+    branches:
+      - main
+      - macOS
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
