--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,7 @@ name: CMake
 
 on: 
   push:
-    branches:
-      - main
-      - 'macOS'
+    branches: [ master macOS ]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
