--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,17 +11,20 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: macos-11.0
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
     
     - name: Checkout submodules
       run: git submodule update --init --recursive
     
-    #- name: install packages
-    #  run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libasound2-dev
-    
+    - name: install packages
+      run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libasound2-dev
+      if: matrix.os == 'ubuntu-latest'
+      
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
