gui: add remaining sliders and buttons. Finally, we can control all parameters from gui!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ target_sources(CloudReverb PRIVATE
 	    plugin/DelayBlock.cpp
 	    plugin/EqBlock.cpp
 	    plugin/Mixer.cpp
+        plugin/RouteBlock.cpp
 	    plugin/Block.cpp
 	    plugin/PluginEditor.cpp
 	    plugin/PluginProcessor.cpp)
