--- a/audio_engine/CMakeLists.txt
+++ b/audio_engine/CMakeLists.txt
@@ -1,18 +1,7 @@
-set(audio_engine_source_files 	AllpassDiffuser.h
-	         					DelayLine.h
-								FastSin.cpp
-								ModulatedAllpass.h
-								ModulatedDelay.h
-								MultitapDiffuser.h
-								Parameter.h
-								ReverbChannel.h
-								ReverbController.h
-								Utils.h
-								Utils/Sha256.cpp
-								AudioLib/Biquad.cpp  
-								AudioLib/Hp1.h  
-								AudioLib/Lp1.h  
-								AudioLib/ShaRandom.cpp  
-								AudioLib/ValueTables.cpp)
-
-add_library(audio_engine ${audio_engine_source_files})
+add_library(audio_engine
+    FastSin.cpp
+    Utils/Sha256.cpp
+    AudioLib/Biquad.cpp
+    AudioLib/ShaRandom.cpp
+    AudioLib/ValueTables.cpp
+)
