--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -63,3 +63,9 @@ jobs:
 
     - name: Download all workflow run artifacts
       uses: actions/download-artifact@v4
+
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: github.ref_type == 'tag'
+      with:
+        files: ./*.zip
