--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
-name: CMake
+# Some parts are taken from https://github.com/sudara/pamplejuce/blob/main/.github/workflows/build_and_test.yml
+name: Build
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
@@ -14,19 +15,27 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        include:
+          - name: Linux
+            os: ubuntu-22.04
+            # extra-flags: -G Ninja
+          - name: macOS
+            os: macos-14
+            # extra-flags: -G Ninja
+          - name: Windows
+            os: windows-latest
       fail-fast: false
-    
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Checkout submodules
       run: git submodule update --init --recursive
-    
+
     - name: install packages
       run: sudo apt-get install libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libasound2-dev libfreetype-dev
-      if: matrix.os == 'ubuntu-latest'
-      
+      if: matrix.os == 'ubuntu-22.04'
+
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
@@ -48,24 +57,37 @@ jobs:
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE -j$(nproc --all)
 
-    - name: Test
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
-      
+    # - name: Test
+    #   working-directory: ${{runner.workspace}}/build
+    #   shell: bash
+      # run: ctest -C $BUILD_TYPE
+
     - name: Archive all artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{matrix.os}}-all-artifacts
-        path: ${{runner.workspace}}/build/CloudReverb_artefacts/
+        name: CloudReverb-${{github.ref_name}}-${{matrix.name}}-x86_64
+        path: |
+          ${{runner.workspace}}/build/CloudReverb_artefacts/$BUILD_TYPE
+          !${{runner.workspace}}/build/CloudReverb_artefacts/$BUILD_TYPE/*CloudReverb_SharedCode*
+  release:
+    if: contains(github.ref, 'tags/v')
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
 
-    - name: Download all workflow run artifacts
-      uses: actions/download-artifact@v4
+    steps:
+      - name: Get Artifacts
+        uses: actions/download-artifact@v4
 
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      if: github.ref_type == 'tag'
-      with:
-        files: ./*.zip
+      - name: Create Zip files
+        shell: bash
+        run: for dir in CloudReverb-*/; do zip -v -r "${dir%/}.zip" "$dir"; done
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          # prerelease: true
+          files: |
+            CloudReverb-*.zip
+          token: ${{ secrets.GITHUB_TOKEN }}
