--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,7 @@ jobs:
       run: |
         curl -LO "https://github.com/Tracktion/pluginval/releases/download/v1.0.4/pluginval_${{ matrix.name }}.zip"
         7z x pluginval_${{ matrix.name }}.zip
+        ls -laR "${{ env.VST3_PATH}}"
         ${{ matrix.pluginval-binary }} --strictness-level 10 --verbose --validate "${{ env.VST3_PATH }}"
     # - name: Test
     #   working-directory: ${{runner.workspace}}/build
